--- a/onlinepresence.html
+++ b/onlinepresence.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <meta name="description" content="How social media marketing lead to the abandoning of Facebook."/>
+  <meta name="description" content="How to have online presence with social media beyond Facebook."/>
 
 </head>
 <body>
@@ -110,7 +110,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best free website maker</a></section><section class="mbr-section content5 cid-qF1hFPUuOr mbr-parallax-background" id="content5-1i">
+<section class="engine"><a href="https://mobirise.ws/p">open source website builder</a></section><section class="mbr-section content5 cid-qF1hFPUuOr mbr-parallax-background" id="content5-1i">
 
     
 
