--- a/company.html
+++ b/company.html
@@ -100,12 +100,12 @@ s.parentNode.insertBefore(b, s);})();
                         Services
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#features12-5">Services</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables1-l">Pricing</a></div>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="company.html#header7-10" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
+                <li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="company.html#header7-10" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
                         
                         About Us
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10">About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15">Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6">Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26">Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7">Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables1-l">Pricing</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
                         &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogarticles.html#content5-1s" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="blog.html#content5-1d" aria-expanded="false">Blog</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
                 </a></div>
@@ -113,7 +113,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
+<section class="engine"><a href="https://mobirise.ws/i">how to build free website</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
 
     
 
