--- a/portfolio.html
+++ b/portfolio.html
@@ -98,12 +98,12 @@ s.parentNode.insertBefore(b, s);})();
                         Services
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#features12-5">Services</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables1-l">Pricing</a></div>
                 </li>
-                <li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="company.html#header7-10" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
+                <li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="company.html#header7-10" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>
                         
                         About Us
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10">About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15">Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6">Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26">Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7">Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables1-l">Pricing</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
                         &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogarticles.html#content5-1s" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="blog.html#content5-1d" aria-expanded="false">Blog</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
                 </a></div>
@@ -111,7 +111,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best free web site maker</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
+<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
 
     
 
@@ -331,7 +331,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <h1 class="mbr-fonts-style mbr-section-heading display-2">Get in touch</h1>
                 <div data-form-alert="" hidden="">Thanks watch for my phone call!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="R+eOuk0LBt+VfxoYne1rH7pQ/HkDguLh/PswUjfjVQNyqUHfKOlP4RkIusX0KKARoUHg3Ow2J6QUAfwSbbrxQEpQehacZQe1ihWRqLhk4uSaRIevArXtC0cVIGnfIroW" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4SEZ0a5GpriDeEST1gN3z7vyC2rKQ9u5zSIRczihqigTze3Vbw+0rjXEIKmAqgMG4MKsZm7h7QetrPym5YEMAj9SxUzf7G22Axv6IVf589eOpipGoT5mMkexC+mWZTaQ" data-form-field="Email">
                     <div class="row input-main">
                         <div class="col-md-6 input-wrap" data-for="name">
                             <input type="text" class="field display-7" name="name" data-form-field="Name" placeholder="Name*" required="" id="name-form2-25">
