--- a/ourstory.html
+++ b/ourstory.html
@@ -87,8 +87,8 @@ s.parentNode.insertBefore(b, s);})();
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="index.html#content5-j" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="index.html#content5-j" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Services
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#features12-5">Services</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47">Pricing</a></div>
@@ -99,14 +99,14 @@ s.parentNode.insertBefore(b, s);})();
                         About Us
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10">About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15">Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6">Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26">Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7">Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47">Pricing</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
-                        &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false">Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false">Social Media</a></div></li></ul>
+                        &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false">Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false">Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false">YouTube</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
                 </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
+<section class="engine"><a href="https://mobirise.ws/b">best free website creator</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
