--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="#top"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>SERIO Design FX<br></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header7-3"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>SERIO Design FX<br></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -115,13 +115,13 @@ s.parentNode.insertBefore(b, s);})();
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10"><span class="icon54-v2-information mbr-iconfont mbr-iconfont-btn"></span>About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15"><span class="fa fa-history mbr-iconfont mbr-iconfont-btn"></span>Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6"><span class="fa fa-product-hunt mbr-iconfont mbr-iconfont-btn"></span>Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47"><span class="imind-pricing mbr-iconfont mbr-iconfont-btn"></span>Pricing</a></div>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="imind-blogger mbr-iconfont mbr-iconfont-btn"></span>
                         &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false"><span class="mdi-communication-textsms mbr-iconfont mbr-iconfont-btn"></span>Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false"><span class="socicon socicon-blogger mbr-iconfont mbr-iconfont-btn"></span>Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false"><span class="icon54-v2-social-media mbr-iconfont mbr-iconfont-btn"></span>Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false"><span class="icon54-v1-youtube-2 mbr-iconfont mbr-iconfont-btn"></span>YouTube</a></div></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>FREE Consultation!
                 </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
+<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
 
     
 
@@ -352,7 +352,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <h1 class="mbr-fonts-style mbr-section-heading display-2">Get in touch</h1>
                 <div data-form-alert="" hidden="">Thanks watch for my phone call!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OQQE2eKnHuEKSkMC3Ad8oco8gooi4TS/A6IXP48gcIPYvls2NglfbhiXfLOaXWspneZ8cYRxZyXi4xAG5dCekBCLi+cQetRa/WOQSgmODb5+D4ZzOCFqNR7Kp98jm8Z4" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rFwYMOmazULigd05tphi932HqOZNqG5Y5ielGeWnqCd1pHTVN2Tiolxnh2FkJJ7CW1KtsI1du7og5UkOFDc9i4DDhn/A/f0uGwsrvU3yp76AiKgVesA9aejBM1sG2ILA" data-form-field="Email">
                     <div class="row input-main">
                         <div class="col-md-6 input-wrap" data-for="name">
                             <input type="text" class="field display-7" name="name" data-form-field="Name" placeholder="Name*" required="" id="name-form2-25">
