--- a/privacy.html
+++ b/privacy.html
@@ -88,7 +88,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="#top"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>SERIO Design FX<br></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header7-3"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>SERIO Design FX<br></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -105,13 +105,13 @@ s.parentNode.insertBefore(b, s);})();
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10"><span class="icon54-v2-information mbr-iconfont mbr-iconfont-btn"></span>About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15"><span class="fa fa-history mbr-iconfont mbr-iconfont-btn"></span>Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6"><span class="fa fa-product-hunt mbr-iconfont mbr-iconfont-btn"></span>Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47"><span class="imind-pricing mbr-iconfont mbr-iconfont-btn"></span>Pricing</a></div>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="imind-blogger mbr-iconfont mbr-iconfont-btn"></span>
                         &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false"><span class="mdi-communication-textsms mbr-iconfont mbr-iconfont-btn"></span>Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false"><span class="socicon socicon-blogger mbr-iconfont mbr-iconfont-btn"></span>Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false"><span class="icon54-v2-social-media mbr-iconfont mbr-iconfont-btn"></span>Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false"><span class="icon54-v1-youtube-2 mbr-iconfont mbr-iconfont-btn"></span>YouTube</a></div></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>FREE Consultation!
                 </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
+<section class="engine"><a href="https://mobirise.ws/q">website creator download</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
 
     
 
